dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
/* ... */
.pptxIcon:before {
  content: "\f1c4";
}

.docIcon:before {
  content: "\f1c2";
}

.docxIcon:before {
  content: "\f1c2";
}

.aacIcon:before {
  content: "\f1c7";
}

.aifIcon:before {
  content: "\f1c7";
}

.iffIcon:before {
  content: "\f1c7";
}

.m3uIcon:before {
  content: "\f1c7";
}

.midIcon:before {
  content: "\f1c7";
}

.mp3Icon:before {
  content: "\f1c7";
}

.mpaIcon:before {
  content: "\f1c7";
}

.raIcon:before {
  content: "\f1c7";
}

.wavIcon:before {
  content: "\f1c7";
}

.wmaIcon:before {
  content: "\f1c7";
}

.shimIconSmall {
  display: inline-block;
  height: 1px;
  width: 12px;
}

.workingIcon {
  color: #f3762a;
}

.liveIcon {
  color: #0b6948;
}

.lockIcon {
  color: #f3762a;
}

.greyDotIcon {
  opacity: 1 !important;
  color: var(--gray-400);
}

.archivedIcon {
  color: #d82b2e;
}

.hostArchivedIcon {
  color: #d82b2e;
}

.hostDefaultIcon {
  color: var(--color-palette-primary-500);
}

.hostStoppedIcon {
  color: var(--gray-500);
}

.filter-tasks-frm {
  margin: 56px 20px 0 0;
}
.filter-tasks-frm .who-user label {
  margin-right: 0.25rem;
}

/*

Styles for commons fields along the backend

*/
.glossaryTermPopup {
  border-radius: 0.125rem;
  background-color: var(--gray-200);
  padding: 0.25rem 0.5rem;
  border: solid 1px var(--gray-400);
  position: absolute;
}

#fileAssetThumbnailSliderWrapper {
  margin-bottom: 0.5rem;
}

.fileAjaxUploader {
  display: flex;
  align-items: center;
  border-radius: 0.125rem;
  position: relative;
  height: 36px;
}
.fileAjaxUploader .fileAjaxUploaderForm {
  border: solid 1px var(--gray-500);
  width: 100%;
}
.fileAjaxUploader input[type=file]::file-selector-button,
.fileAjaxUploader input[type=file]::-webkit-file-upload-button {
  background-color: var(--color-palette-primary-500);
  height: 36px;
  border: 0;
  color: #ffffff;
  cursor: pointer;
  padding: 0 1rem;
}
.fileAjaxUploader input[type=file]::file-selector-button:hover,
.fileAjaxUploader input[type=file]::-webkit-file-upload-button:hover {
  background-color: var(--color-palette-primary-400);
}
.fileAjaxUploaderActions div {
  display: inline-block;
}
.fileAjaxUploaderActions div:first-child {
  margin-right: 0.5rem;
}
.fileAjaxUploaderFileName {
  margin-right: 0.5rem;
}
.fileAjaxUploaderStatus {
  align-items: center;
  display: flex;
  position: absolute;
  right: 1rem;
}
.fileAjaxUploaderStatusMsg {
  margin-left: 0.5rem;
}
.fileAjaxUploader .dijitProgressBar {
  width: 150px;
}

.catPreview {
  background-color: #ffffff;
  border-radius: 0.125rem;
  border: solid 1px var(--gray-500);
  margin-top: 0.5rem;
  max-width: 1100px;
  min-height: 38px;
  padding: 0.25rem;
}
.catPreview li {
  background: var(--gray-200);
  border-radius: 0.125rem;
  border: solid 1.5px var(--gray-400);
  display: inline-block;
  font-size: 0.625rem;
  margin: 2px 5px 2px 0px;
  padding: 0.25rem 0.5rem 0.25rem 0.25rem;
  position: relative;
  text-decoration: none;
}
.catPreview a {
  display: inline-block;
  vertical-align: sub;
}
.catPreview a:hover {
  color: #cc0000;
}

.fileSelectorControls .dijitTextBox {
  width: 300px;
}

.lineDividerTitle {
  color: var(--gray-700);
  font-size: 1.25rem;
  border-bottom: 1px solid var(--gray-400);
  padding-bottom: 1rem;
  margin: 3rem 0 1.5rem;
}

#editor-toolbar, .wysiwyg-tools, .editor-toolbar {
  display: flex;
  justify-content: space-between;
  margin-top: 0.5rem;
}
#editor-toolbar .checkbox, .wysiwyg-tools .checkbox, .editor-toolbar .checkbox,
#editor-toolbar .radio,
.wysiwyg-tools .radio,
.editor-toolbar .radio {
  margin: 0;
}

.editor-toolbar {
  max-width: 1100px;
  width: 100%;
}

.langVariablesField .glossaryTermPopup {
  right: -8px;
  bottom: 36px;
}

.wysiwyg-tools .dijitSelect {
  width: auto;
}

.wysiwyg-wrapper {
  width: 100%;
  max-width: 1100px;
}

.key-value-form {
  display: flex;
  margin-bottom: 1rem;
  width: 500px;
}
.key-value-form .dijit {
  margin-right: 0.5rem;
}
.key-value-form .dijit:last-child {
  margin-right: 0;
}

.key-value-items {
  width: 500px;
}
.key-value-items .listingTable th:first-child,
.key-value-items .listingTable td:first-child {
  padding-left: 0.5rem;
}

.tagsOptions {
  background: #ffffff;
  border: solid 1.5px var(--gray-400);
  min-width: 175px;
  padding-top: 7px;
  position: absolute;
  z-index: 1;
}
.tagsOptions:before {
  background-color: #ffffff;
  border-left: solid 1.5px var(--gray-400);
  border-top: solid 1.5px var(--gray-400);
  content: "";
  height: 10px;
  left: 5px;
  position: absolute;
  top: -6px;
  transform: rotate(45deg);
  width: 10px;
}
.tagsOptions .personaIcon,
.tagsOptions .tagIcon {
  margin-right: 5px;
  opacity: 0.7;
}
.tagsOptions h3 {
  background-color: var(--gray-500);
  border-bottom: solid 1.5px var(--gray-400);
  margin-bottom: 0;
  padding: 5px 10px;
}
.tagsOptions a {
  border-bottom: solid 1.5px var(--gray-400);
  cursor: pointer;
  display: block;
  padding: 5px 10px;
  text-decoration: none;
  white-space: nowrap;
}
.tagsOptions a:hover {
  background-color: var(--gray-400);
}
.tagsOptions a:last-child {
  border-bottom: none;
}
.tagsOptions .suggestedTagFocus {
  background-color: var(--gray-400);
  box-shadow: none;
  outline: 0;
}

.tagLink {
  height: 1.5rem;
  padding: 0.5rem;
  background: var(--color-palette-primary-200);
  border-radius: 0.25rem;
  color: var(--color-palette-primary-500);
  font-size: 0.75rem;
  line-height: 0.374rem;
  text-align: center;
  text-decoration: none;
  border: 1px solid rgba(0, 0, 0, 0.1);
  width: auto;
  padding-left: 1.25rem;
  position: relative;
}
.tagLink.persona:before {
  content: "\f007";
  display: flex;
}
.tagLink:after {
  position: absolute;
  left: 0.5rem;
  color: var(--color-palette-primary-500);
  content: "✕";
  font-size: 0.75rem;
  text-align: center;
  line-height: 0.374rem;
}
.tagLink:hover {
  border: 1px solid var(--color-palette-primary-500);
}

.tagsWrapper {
  position: relative;
}
/* ... */

